--- a/chatapp/templates/chatapp/room.html
+++ b/chatapp/templates/chatapp/room.html
@@ -6,6 +6,7 @@
     <title>Chat Room</title>
 </head>
 <body>
+    <a>{{request.user}}</a>
     <textarea id="chat-log" cols="100" rows="20"></textarea><br>
     <input id="chat-message-input" type="text" size="100"><br>
     <input id="chat-message-submit" type="button" value="Send">
@@ -25,7 +26,9 @@
 
         chatSocket.onmessage = function(e) {
             const data = JSON.parse(e.data);
-            document.querySelector('#chat-log').value += (data.message + '\n');
+            document.querySelector('#chat-log').value += (data.message + '\n' + data.request_user);
+
+            // document.querySelector('#chat-log').value += (data.request_user + '\n');
         };
 
         chatSocket.onclose = function(e) {
@@ -42,9 +45,12 @@
         document.querySelector('#chat-message-submit').onclick = function(e) {
             const messageInputDom = document.querySelector('#chat-message-input');
             const message = messageInputDom.value;
+            
             chatSocket.send(JSON.stringify({
-                'message': message
+                'message': message,
+                'request_user': requestUser
             }));
+
             messageInputDom.value = '';
         };
     </script>
