--- a/chatapp/templates/chatapp/room.html
+++ b/chatapp/templates/chatapp/room.html
@@ -26,7 +26,7 @@
 
         chatSocket.onmessage = function(e) {
             const data = JSON.parse(e.data);
-            document.querySelector('#chat-log').value += (data.message + '\n' + data.request_user);
+            document.querySelector('#chat-log').value += ( data.request_user +  data.message  + '\n' );
 
             // document.querySelector('#chat-log').value += (data.request_user + '\n');
         };
